<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorQuaseBranco"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/novocliente_text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="23dp"
            android:fontFamily="sans-serif"
            android:text="NOVO CLIENTE"
            android:textColor="@color/colordarkred"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/novo_cliente_nomecliente_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:layout_toLeftOf="@+id/button9"
            android:layout_toStartOf="@+id/button9"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Nome Completo"
            android:textColorHint="@color/colorPrimary"
            />


        <EditText
            android:id="@+id/novo_cliente_CPF_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="CPF"
            android:textColorHint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/novo_cliente_email_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText8"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="170dp"
            android:layout_toEndOf="@+id/textView14"
            android:layout_toRightOf="@+id/textView14"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:textColorHint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/novo_cliente_telefone_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="220dp"
            android:layout_toEndOf="@+id/textView13"
            android:layout_toRightOf="@+id/textView13"
            android:ems="10"
            android:inputType="phone"
            android:hint="Telefone"
            android:textColorHint="@color/colorPrimary"/>

        <Button
            android:id="@+id/novo_cliente_cancelar_button"
            android:layout_width="135dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="450dp"
            android:background="@color/colorSalmao"
            android:textColor="@color/colorWhite"
            android:text="CANCELAR"
            android:textSize="14sp" />

        <Button
            android:id="@+id/novo_cliente_concluir_button"
            android:layout_width="135dp"
            android:layout_height="55dp"
            android:layout_above="@+id/button9"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="450dp"
            android:layout_toLeftOf="@+id/editText5"
            android:layout_toStartOf="@+id/editText5"
            android:text="CONCLUIR"

            android:background="@color/colorSalmao"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/novo_cliente_estado_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/novo_cliente_email_input"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="270dp"
            android:layout_toEndOf="@+id/textView13"
            android:layout_toRightOf="@+id/textView13"
            android:ems="10"
            android:hint="Estado"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_cliente_cidade_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/novo_cliente_email_input"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="320dp"
            android:layout_toEndOf="@+id/textView13"
            android:layout_toRightOf="@+id/textView13"
            android:ems="10"
            android:hint="Cidade"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_cliente_rua_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/novo_cliente_email_input"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="370dp"
            android:layout_toEndOf="@+id/textView13"
            android:layout_toRightOf="@+id/textView13"
            android:ems="10"
            android:hint="Rua"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary" />


    </FrameLayout>
</LinearLayout>