...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/clientes_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/colorSalmao"
            android:layout_marginLeft="130dp"
            android:text="Clientes"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/carros_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
...
